# memory_Haskell

./: memory.cabal
src/: Main.hs
