name:                memory
version:             1.0.0
author:              Author name here
build-type:          Simple
cabal-version:       >=1.10

executable memory
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, gloss >= 1.11 && < 1.14, random >= 1.1 && < 1.4, random-shuffle >= 0.0.4
